@@ -520,6 +520,7 @@ N(OP_CrystalReclaim),
 N(OP_CrystalCreate),
 N(OP_SendMaxCharacters),
 N(OP_SendMembership),
+N(OP_SendMembershipDetails),
 N(OP_LFGuild),
 N(OP_XTargetRequest),
 N(OP_XTargetResponse),
