@@ -33,7 +33,8 @@ OP_SendSkillCapsChecksum=0x0000 #
 
 # Character Select Related:
 OP_DeleteCharacter=0x0ab4 # 
-OP_SendMembership=0x0b1f # 
+OP_SendMembership=0x03b2 # 
+OP_SendMembershipDetails=0x0b1f
 OP_CharacterCreateRequest=0x06b # 
 OP_CharacterCreate=0x0afc # 
 OP_RandomNameGenerator=0x0000 #  
