@@ -3,6 +3,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 ==12/19/2012==
 Trevius: RoF - More work on RoF Structs and added the Client Version stuff.
 Trevius: RoF - Removed/Disabled most opcodes until we are further along and then I will add them all back in and populate the rest.
+Trevius: RoF - Added a new packet dealing with membership status, but it may need more work.
 
 ==12/18/2012==
 Lerxst: Added the RoF.cpp files to the patches folder of the project for the vs2008 people.
